fix code wrapping

--- a/css/main.less
+++ b/css/main.less
@@ -566,10 +566,14 @@ strong {
 	}
 
 	> :not(.highlight) code {
+		.box-sizing(border-box);
 		display: inline-block;
+		max-width: 100%;
+		overflow-wrap: break-word;
 		background-color: @colorBg;
 		border: 1px solid @colorFgBorder;
 		padding: 0 4px;
+		line-height: 1.3;
 	}
 
 	.highlight {
